# ldk-server-mcp

./: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
src/: config.rs  main.rs  mcp.rs  protocol.rs
src/tools/: handlers.rs  mod.rs  schema.rs
tests/: integration.rs
tests/fixtures/: test_cert.pem
