[package]
name = "ldk-server-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-server-client = { git = "https://github.com/tnull/ldk-server", rev = "5bd1c61865dc991d81ebbdce8930182366c22f0d", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
